fixed spacing issue on mobile view

--- a/styles.css
+++ b/styles.css
@@ -776,6 +776,7 @@ input{
         flex-direction: column;
         justify-content: center;
         gap: 16px;
+        margin-bottom: 0px;
     }
 
     .project-image img {
@@ -830,6 +831,11 @@ input{
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    .vm-btn{
+        padding-bottom: 64px;
+        font-size: 16px;
     }
 
 }
